--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "react": "^0.14.2",
     "react-addons": "^0.9.1-deprecated",
     "react-addons-pure-render-mixin": "^0.14.7",
-    "react-clock": "^1.0.5",
     "react-dom": "^0.14.2",
     "react-prism": "^3.1.1",
     "react-redux": "^4.0.0",
@@ -21,7 +20,6 @@
     "shower-ribbon": "^2.0.4"
   },
   "devDependencies": {
-    "appcache-webpack-plugin": "^1.2.0",
     "autoprefixer": "^6.0.2",
     "babel": "^6.0.0",
     "babel-core": "^6.0.0",
@@ -33,7 +31,6 @@
     "babel-plugin-transform-react-remove-prop-types": "0.1.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-react": "^6.0.0",
-    "babel-preset-react-hmre": "1.0.1",
     "babel-preset-stage-2": "^6.0.0",
     "cross-env": "1.0.6",
     "css-loader": "^0.23.0",
@@ -46,7 +43,7 @@
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.6.1",
     "ip": "1.1.0",
-    "json-loader": "^0.5.2",
+    "json-loader": "^0.5.4",
     "mocha": "^2.3.2",
     "object.assign": "^4.0.1",
     "postcss-focus": "^1.0.0",
@@ -55,11 +52,7 @@
     "postcss-reporter": "^1.2.1",
     "postcss-simple-vars": "^1.0.0",
     "raw-loader": "^0.5.1",
-    "react-transform-hmr": "^1.0.1",
-    "redux-devtools": "^3.2.0",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.0.11",
-    "redux-slider-monitor": "^1.0.5",
+    "redbox-react": "^1.2.3",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.1",
