--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "redux-localstorage": "^0.4.0",
     "redux-router": "^1.0.0-beta8",
     "redux-thunk": "^1.0.0",
-    "shower-ribbon": "^2.0.4"
-  },
-  "devDependencies": {
+    "shower-ribbon": "^2.0.4",
     "autoprefixer": "^6.0.2",
     "babel": "^6.0.0",
     "babel-core": "^6.0.0",
