--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-shower",
   "version": "1.0.0",
   "bin" : {
-    "reshower" : "./bin/reshower.js" 
+    "reshower" : "./bin/reshower.js"
   },
   "dependencies": {
     "babel-plugin-syntax-class-properties": "^6.5.0",
@@ -15,10 +15,8 @@
     "react-dom": "^0.14.2",
     "react-prism": "^3.1.1",
     "react-redux": "^4.0.0",
-    "react-router": "^1.0.3",
     "redux": "^3.0.0",
     "redux-localstorage": "^0.4.0",
-    "redux-router": "^1.0.0-beta8",
     "redux-thunk": "^1.0.0",
     "shower-ribbon": "^2.0.4",
     "autoprefixer": "^6.0.2",
@@ -33,19 +31,12 @@
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-react": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
-    "cross-env": "1.0.6",
     "css-loader": "^0.23.0",
     "cssnano": "^3.0.1",
-    "eslint": "^1.4.1",
-    "eslint-config-airbnb": "1.0.0",
-    "eslint-plugin-react": "^3.3.2",
-    "expect": "^1.10.0",
     "extract-text-webpack-plugin": "0.9.1",
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.6.1",
-    "ip": "1.1.0",
     "json-loader": "^0.5.4",
-    "mocha": "^2.3.2",
     "object.assign": "^4.0.1",
     "postcss-focus": "^1.0.0",
     "postcss-import": "^7.0.0",
@@ -58,6 +49,12 @@
     "url-loader": "^0.5.6",
     "webpack": "^1.12.1",
     "webpack-dev-server": "^1.11.0"
+  },
+
+  "devDependencies": {
+    "eslint": "^1.4.1",
+    "eslint-config-airbnb": "1.0.0",
+    "eslint-plugin-react": "^3.3.2"
   },
   "repository": {
     "type": "git",
