fork webpack to handle errors right

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "redbox-react": "^1.2.3",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.1",
+    "webpack": "git+ssh://github.com/Termina1/webpack.git#bc2076738b686b9ac93ab8918916b0873c06f81d",
     "webpack-dev-server": "^1.11.0"
   },
 
