--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "react-addons-pure-render-mixin": "^0.14.7",
     "react-dom": "^0.14.2",
     "react-prism": "^3.1.1",
-    "react-redux": "^4.0.0",
-    "redux": "^3.0.0",
+    "lodash": "4.11.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
     "redux-localstorage": "^0.4.0",
     "redux-thunk": "^1.0.0",
     "shower-ribbon": "^2.0.4",
