title with react-document-title

--- a/package.json
+++ b/package.json
@@ -1,31 +1,18 @@
 {
   "name": "react-shower",
   "version": "1.0.0",
-  "bin" : {
-    "reshower" : "./bin/reshower.js"
+  "bin": {
+    "reshower": "./bin/reshower.js"
   },
   "dependencies": {
-    "babel-plugin-syntax-class-properties": "^6.5.0",
-    "babel-plugin-transform-class-properties": "^6.6.0",
-    "fontfaceobserver": "^1.5.1",
-    "history": "1.17.0",
-    "react": "^0.14.2",
-    "react-addons": "^0.9.1-deprecated",
-    "react-addons-pure-render-mixin": "^0.14.7",
-    "react-dom": "^0.14.2",
-    "react-prism": "^3.1.1",
-    "lodash": "4.11.2",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
-    "redux-localstorage": "^0.4.0",
-    "redux-thunk": "^1.0.0",
-    "shower-ribbon": "^2.0.4",
     "autoprefixer": "^6.0.2",
     "babel": "^6.0.0",
     "babel-core": "^6.0.0",
     "babel-eslint": "^4.1.2",
     "babel-loader": "^6.0.0",
     "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-syntax-class-properties": "^6.5.0",
+    "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-plugin-transform-react-constant-elements": "6.3.13",
     "babel-plugin-transform-react-inline-elements": "6.3.13",
     "babel-plugin-transform-react-remove-prop-types": "0.1.0",
@@ -36,8 +23,11 @@
     "cssnano": "^3.0.1",
     "extract-text-webpack-plugin": "0.9.1",
     "file-loader": "^0.8.4",
+    "fontfaceobserver": "^1.5.1",
+    "history": "1.17.0",
     "html-webpack-plugin": "^1.6.1",
     "json-loader": "^0.5.4",
+    "lodash": "4.11.2",
     "object.assign": "^4.0.1",
     "postcss-focus": "^1.0.0",
     "postcss-import": "^7.0.0",
@@ -45,13 +35,23 @@
     "postcss-reporter": "^1.2.1",
     "postcss-simple-vars": "^1.0.0",
     "raw-loader": "^0.5.1",
+    "react": "^0.14.2",
+    "react-addons": "^0.9.1-deprecated",
+    "react-addons-pure-render-mixin": "^0.14.7",
+    "react-document-title": "^2.0.1",
+    "react-dom": "^0.14.2",
+    "react-prism": "^3.1.1",
+    "react-redux": "^4.4.5",
     "redbox-react": "^1.2.3",
+    "redux": "^3.5.2",
+    "redux-localstorage": "^0.4.0",
+    "redux-thunk": "^1.0.0",
+    "shower-ribbon": "^2.0.4",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "git+ssh://github.com/Termina1/webpack.git#bc2076738b686b9ac93ab8918916b0873c06f81d",
     "webpack-dev-server": "^1.11.0"
   },
-
   "devDependencies": {
     "eslint": "^1.4.1",
     "eslint-config-airbnb": "1.0.0",
