--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "postcss-loader": "^0.8.0",
     "postcss-reporter": "^1.2.1",
     "postcss-simple-vars": "^1.0.0",
-    "prismjs": "git+https://github.com/PrismJS/prism.git#gh-pages",
+    "prismjs": "^1.5.1",
     "raw-loader": "^0.5.1",
     "react": "^0.14.2",
     "react-addons": "^0.9.1-deprecated",
